@@ -1,0 +1,3 @@
+<?php
+require_once (dirname(dirname(__FILE__)) . '/modtags.class.php');
+class ModTags_mysql extends ModTags {}
