@@ -1,6 +1,6 @@
 <?php
 /**
- * Get a list of Goods templates
+ * Get a list of Goods tags
  *
  * @package minishop
  * @subpackage processors
@@ -8,6 +8,7 @@
  
 if (!$modx->hasPermission('view')) {return $modx->error->failure($modx->lexicon('ms.no_permission'));} 
 
+/*
 if (!isset($modx->miniShop) || !is_object($modx->miniShop)) {
 	$miniShop = $modx->getService('miniShop','miniShop',$modx->getOption('minishop.core_path',null,$modx->getOption('core_path').'components/minishop/').'model/minishop/', $scriptProperties);
 	if (!($miniShop instanceof miniShop)) return '';
@@ -30,5 +31,27 @@ foreach ($res as $v) {
 	);
 
     $arr[]= $tmp;
+}
+*/
+
+$query = $modx->getOption('query', $_REQUEST, 0);
+
+$q = $modx->newQuery('ModTags');
+
+if (!empty($query)) {
+	$q->where(array('tag:LIKE' => '%'.$query.'%'));
+}
+$q->sortby('tag','ASC');
+$q->groupby('tag');
+$count = $modx->getCount('ModTags', $q);
+
+$q->limit(10);
+
+$res = $modx->getCollection('ModTags', $q);
+$arr = array();
+foreach ($res as $v) {
+    $arr[]= array(
+		'tag' => $v->get('tag')
+	);
 }
 return $this->outputArray($arr, $count);
